fixed css for the add spot button on mobile and spot form on mobile

--- a/frontend/src/components/Spots/styles/SpotForm.module.css
+++ b/frontend/src/components/Spots/styles/SpotForm.module.css
@@ -88,3 +88,11 @@ hr {
 .spotNameInput {
   width: 100%;
 }
+
+@media (max-width: 768px) {
+  .formRow {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+}
